# hhParser

./: README.md  config.json  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat
src/: main.py
src/bd/: base.py
src/methods/: base.py  http.py
src/stats/: base.py
