[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-async-parser"
version = "1.0.0"
description = "Асинхронный парсер вакансий с hh.ru"
readme = "README.md"
authors = [
    {name = "Denis", email = "denispechenyy@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.8.0",
]











